refactor: CardResult를 출력형식에 맞게 변환해주는 기능을 viewRenderer에서 수행하게 수정
- 출력형식이 입력한 순서대로 정렬되게 수정